Simplify module support for pdfbox